# Basics-of-Software-Engineering-Project

./: .gitignore  .gitignore.txt  CMakeLists.txt  Candidate.cpp  Candidate.h  Employer.cpp  Employer.h  Job_Listing.cpp  Job_Listing.h  Job_Submission.cpp  Job_Submission.h  README.md  Review.cpp  Review.h  User.cpp  User.h  files.cpp  files.h  main.cpp  use case (1).drawio  utils.cpp  utils.h
Data Flow Diagrams/Raw files/: Basics of software engineering project Data Flow Diagram level 0.vsdx  Basics of software engineering project Data Flow Diagram level 1.vsdx  Basics of software engineering project Data Flow Diagram level 2.vsdx  Basics of software engineering project diagram dfd level 0.vsdx  Basics of software engineering project diagram dfd level 1.vsdx  Basics of software engineering project diagram dfd level 2.vsdx
Database/: Candidate Resumes  DataBase Explanation  Jobs Data  Submissions Data  Users Data
Test Cases/: Group 3 Task 3 - Software Test Cases.docx
User case requirements/: FAQ.docx  מטלה 1 - כתיבת דרישות סופי.docx
